--- a/src/index.css
+++ b/src/index.css
@@ -232,13 +232,13 @@ body {
   margin: 20px 0 20px 30px  
 }
 
-.window__project-image{
+/* .window__project-image{
   background: url("/src/assets/nature.jpg");
   width: 100%;
   height: 200px;
   background-size: cover;
   margin-top: 20px; 
-}
+} */
 
 .window__button{
   background: #77BDA1;
@@ -252,6 +252,8 @@ body {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.35);
   margin: 10px 10px 20px 10px;
   cursor: url("assets/Peka.png"), auto;
+  text-decoration: none;
+
 }
 
 /* MEDIA QUERIES */
