--- a/src/index.css
+++ b/src/index.css
@@ -223,12 +223,18 @@ body {
   cursor: url("/assets/Peka.png"), auto;
 }
 
-.project-tag-group{
+.div-container {
+  position: relative;
+}
+
+.project-tag-group {
+  position: absolute;
+  bottom: 0; 
+  left: 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: flex-end;
-  height: 100%;
+  gap: 5px;
 }
 
 .window__button-group{
@@ -267,9 +273,10 @@ body {
   background: #FBD16D;
   border-radius: 5px;
   padding: 0 10px;
+  margin: 0 0 10px 10px;
   border: 2px solid #502A07; 
-  margin: 10px;
-}
+
+  }
 
 
 
@@ -340,7 +347,8 @@ body {
   }
   .project-tag{
     padding: 0 5px;
-    margin: 5px;
+
+    
   }
 }
 
